# cliargs-rust

./: .gitignore  .gitmessage.txt  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: rust.yml
cliargs_derive/: Cargo.toml  README.md
cliargs_derive/src/: errors.rs  lib.rs  option_field.rs  scalar_field.rs  util.rs  vector_field.rs
src/: errors.rs  lib.rs  opt_cfg.rs  validators.rs
src/errors/: arg_err.rs  cfg_err.rs  mod.rs  opt_err.rs
src/help/: mod.rs  opts.rs
src/opt_cfg/: mod.rs
src/parse/: mod.rs  parse.rs  parse_.rs  parse_for.rs  parse_sub.rs  parse_sub_with.rs  parse_with.rs
tests/: help_test.rs  parse_for_test.rs  parse_test.rs  parse_with_test.rs
tests/compile_errors/: lifetime_of_cmd_args.stderr  lifetime_of_cmd_name.rs  lifetime_of_cmd_name.stderr  lifetime_of_cmd_opt_arg.rs  lifetime_of_cmd_opt_arg.stderr  lifetime_of_cmd_opt_args.stderr
tests/compile_errors/lt_1_91/: lifetime_of_cmd_args.rs  lifetime_of_cmd_args.stderr  lifetime_of_cmd_name.stderr  lifetime_of_cmd_opt_arg.stderr  lifetime_of_cmd_opt_args.rs  lifetime_of_cmd_opt_args.stderr
