[package]
name = "cliargs"
version = "0.2.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.74.1"
description = "Parses command line arguments and prints the help."
documentation = "https://docs.rs/cliargs"
readme = "README.md"
repository = "https://github.com/sttk/cliargs-rust"
license = "MIT"
keywords = ["cli", "command", "line", "argument", "parse"]
categories = ["command-line interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
trybuild = "1.0"
