[package]
name = "cliargs_derive"
version = "0.1.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.74.1"
description = "The derive macro that automatically implements some methods to parse command line arguments for a struct instnace."
documentation = "https://docs.rs/cliargs_derive"
readme = "README.md"
repository = "https://github.com/sttk/cliargs-rust"
license = "MIT"
keywords = ["cli", "command", "line", "argument", "parse"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true
